--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "redux-persist-transform-filter": "0.0.20",
     "save-file": "^2.3.1",
     "tailwindcss": "^3.3.2",
+    "typeface-nunito": "^1.1.13",
     "uid": "^2.0.1",
     "web-vitals": "^3.0.4",
     "xlsx": "^0.18.5"
