--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,58 +1,26 @@
 {
-  "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "outDir": "./dist/",
-    "baseUrl": "./",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "sourceMap": true,
-    "noImplicitAny": false,
-    "moduleResolution": "node",
-    "module": "esnext",
-    "target": "es6",
-    "jsx": "react-jsx",
+    "target": "es5",
     "lib": [
-      "es2018",
-      "dom"
-    ],
-    "plugins": [
-      {
-        "transform": "@formatjs/ts-transformer",
-        "import": "transform",
-        "type": "config",
-        "overrideIdFn": "[sha512:contenthash:base64:6]",
-        "ast": true
-      }
-    ],
-    "types": [
-      "node",
-      "lodash"
+      "dom",
+      "dom.iterable",
+      "esnext"
     ],
     "allowJs": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
+    "module": "esnext",
+    "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true
+    "noEmit": true,
+    "jsx": "react-jsx"
   },
-  "TypeRoots": [
-    "node_modules/@types"
-  ],
   "include": [
-    "./src/**/*"
-  ],
-  "lib": [
-    "es2018",
-    "dom",
-    "es6"
-  ],
-  "exclude": [
-    "node_modules",
-    "build",
-    "scripts",
-    "dist",
-    "blueprint-templates"
+    "src"
   ]
 }
