--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@adobe/react-spectrum": "^3.28.0",
     "@ant-design/charts": "^1.4.2",
     "@ant-design/icons": "^5.1.4",
     "@firebase/database-compat": "^0.3.4",
@@ -16,6 +17,7 @@
     "@types/react": "^18.2.13",
     "@types/react-dom": "^18.2.6",
     "antd": "^5.6.3",
+    "antd-table-export": "^0.0.5",
     "autoprefixer": "^10.4.14",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
